--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -42,6 +42,7 @@ add_subdirectory(offboard)
 add_subdirectory(parachute)
 add_subdirectory(params)
 add_subdirectory(set_actuator)
+add_subdirectory(set_gps_origin)
 add_subdirectory(sniffer)
 add_subdirectory(system_info)
 add_subdirectory(takeoff_and_land)
